<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app='http://schemas.android.com/apk/res-auto'
    app:cardElevation='8dp'
    app:cardCornerRadius='10dp'
    android:padding='10dp'
    android:layout_margin='10dp'>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/email_text_card"
           android:textStyle="bold"
           android:textSize="20sp"/>
           
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummy_dummy_com"
            android:textStyle="bold"
            android:layout_marginStart="40dp"
            android:textSize="17sp"
            android:id="@+id/email_text_value"/>
    
    
       </LinearLayout>
    
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
           
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/nombre_text_card"
           android:textStyle="bold"
           android:textSize="20sp"/>
           
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nombre_texto"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="17sp"
            android:id="@+id/nombre_text_value"/>
    
    
       </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
           
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/apellido_card"
           android:textStyle="bold"
           android:textSize="20sp"/>
           
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/apellido_card_value"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="17sp"
            android:id="@+id/lastname_text_value"/>
    
    
       </LinearLayout>
    </LinearLayout>

    
</androidx.cardview.widget.CardView>